# TrabajoIngDatos

./: README.md  app.db  database.py  docker-compose.yml  main.py  maintest.py  migrations_update_final_XXL.rar  pyproject.toml
.upm/: store.json
Migrations_update_final_xd/: 011_create_TiposColaborador.sql  012_create_Generos.sql  013_create_FormasContrato.sql  015_create_Planes.sql  016_create_DistritosProvincias.sql  017_create_Clientes.sql  018_create_DestinosInstalacion.sql  019_create_Colaboradores.sql  020_create_Ventas.sql  021_create_Colaboradores_Bancos.sql
app/: main.py
migrations_proyecto_update/: 001_create_TiposPlan.sql  002_create_TiposVivienda.sql  003_create_TiposPredio.sql  004_create_Distritos.sql  007_create_Categorias.sql  008_create_TiposComision.sql  010_create_Bancos.sql  011_create_TiposDocumento.sql  012_create_TiposColaborador.sql  014_create_FormaContrato.sql  015_create_Plan.sql  016_create_DestinosInstalacion.sql  017_create_Provincias.sql  018_create_Departamentos.sql  019_create_Clientes.sql  020_create_Colaboradores.sql  021_create_Ventas.sql  022_Colaboradores_Bancos.sql
migrations_update_final/: 001_create_TiposPlan.sql  002_create_TiposVivienda.sql  004_create_Nacionalidades.sql  005_create_TiposContrato.sql  008_create_Equipos.sql  009_create_Bancos.sql  010_create_TiposDocumento.sql  013_create_FormasContrato.sql  014_create_Zonas.sql  015_create_Planes.sql  016_create_DistritosProvincias.sql  017_create_Clientes.sql
migrations_update_final_XXL/: 003_create_TiposPredio.sql  006_create_Categorias.sql  020_create_Ventas.sql  (+4 more)
(+20 files in other folders)
