[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "bottle-template"
version = "0.1.0"
[tool.poetry.dependencies]
bottle = "^0.12.18"
python = "^3.8"
SQLAlchemy = "^1.4.44"
python-dotenv = "^0.21.0"
[tool.poetry.dev-dependencies]
